mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Recipe Manager & Meal Planner
    gethomepage.dev/group: Home
    gethomepage.dev/icon: mealie
    gethomepage.dev/name: Mealie
spec:
  ingressClassName: nginx
  rules:
    - host: mealie.alexnorum.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
    - host: mealie.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
